# ind_knn_ad

./: pyproject.toml  requirements.txt  streamlit_app.py
