[tool.poetry]
name = "ind-knn-ad"
version = "0.1.0"
description = ""
authors = ["Ken <healthysecond@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
torchvision = "^0.24.1"
streamlit = "^1.52.2"
protobuf = "^6.33.2"
altair = "^6.0.0"
setuptools = "^80.9.0"
wget = "^3.2"
matplotlib = "^3.10.8"
timm = "^1.0.22"
click = "^8.3.1"
tqdm = "^4.67.1"
numpy = "^2.4.0"
pillow = "^12.0.0"
pyyaml = "^6.0.3"
scikit-learn = "^1.8.0"
torch = "^2.9.1"
onnx = "^1.20.0"
onnxscript = "^0.5.7"
onnxruntime = "^1.23.2"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
